[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghsec"
version = "0.1.1"
description = "CLI tool to fetch, display, and manage GitHub security alerts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["rich"]

[project.scripts]
ghsec = "ghsec.cli:main"

[dependency-groups]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/ghsec"]
